# stratum

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  geoip.py  main.py  security.py
backend/app/api/: __init__.py  factory.py  routes.py  schemas.py
backend/app/collectors/: __init__.py  dns.py  enrichment.py  http_sampler.py  traceroute.py  warmer.py
backend/app/db/: __init__.py  base.py  models.py  repository.py
backend/app/llm/: __init__.py  analysis.py  anthropic.py  base.py  catalog.py  fake.py  openrouter.py  prompt.py  registry.py  schema.py
backend/app/pipeline/: __init__.py  analyze.py  bundle.py  events.py  manager.py  orchestrator.py  validator.py
backend/tests/: conftest.py  http_test_server.py  test_analysis.py  test_api.py  test_backoff.py  test_bundle.py  test_degraded.py  test_dns.py  test_enrichment.py  test_fake_llm.py  test_geoip.py  test_health.py  test_llm_providers.py  test_multicdn_regression.py  test_persistence.py  test_pipeline.py  test_sampler.py  test_security.py  test_traceroute.py  test_validator.py  test_warmer.py
backend/tests/fixtures/bundle/: golden_bundle.json
backend/tests/fixtures/reports/: degraded_report.json
backend/tests/fixtures/traceroute/: mtr_route.json  tcptraceroute_route.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.stack.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: a11y.spec.ts  (+4 more)
frontend/e2e-stack/: flows.spec.ts
(+51 files in other folders)
