[project]
name = "stratum-backend"
version = "0.1.0"
description = "Stratum — Cache & Delivery Analyzer (backend + pipeline)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "dnspython>=2.7",
    "httpx[http2]>=0.28",
    "maxminddb>=2.6",
    "playwright>=1.48",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "psycopg[binary]>=3.2",
    "mmdb-writer>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
asyncio_mode = "auto"
markers = [
    "live: tests that make real network or real LLM calls (excluded by default)",
    "postgres: tests that require a live Postgres instance",
]

[tool.uv]
package = false
